# Portfolio

./: .gitignore  Dockerfile  README.md  README_RECRUTEUR.md  packages.txt  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
.streamlit/: config.toml
app/: __init__.py  main.py
docs/: architecture.md  assistant_ia_configuration_template.txt  assistant_models_manifest.json  data_dictionary.md  erd_miro.md
docs/assistant_rag/: app_concept_and_navigation.md  app_processes_and_calculations.md  assistant_behavior_contract.md  chatmd_llm_rag.md  code_understanding_guide.md  data_and_modeling_context.md  data_model_semantics.md  identity_and_audience.md  knowledge_graph_entities.md  local_llm_connectors.md  portfolio_rag_scope.md  recruiter_reading_guide.md  streamlit_cloud_deployment.md
pipelines/: main_flow.py
scripts/: check_runtime_dependencies.py  generate_data.py  generate_qr.py  get_google_calendar_refresh_token.py  setup_assistant_ia.py  start_app.sh  stop_app.sh
src/portfolio_app/: __init__.py  config.py  erd.py  features.py  miro.py  modeling.py  preprocessing.py  quality.py  simulation.py  storage.py
tests/: conftest.py  test_contact_availability.py  test_dark_theme.py  test_erd.py  test_features.py  test_jira_integration.py  test_modeling.py  test_navigation_state.py  test_simulation.py  test_smoke_app.py  test_temporal_modeling.py
