[tool.poetry]
name = "portfolio-data-app"
version = "0.1.0"
description = "Portfolio Data Scientist / Data Analyst sous forme d'application Python Streamlit."
authors = ["Cyriac Dauthel <cyriac@example.com>"]
readme = "README.md"
packages = [{ include = "portfolio_app", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
pandas = "^2.2.3"
numpy = "^2.1.3"
streamlit = "^1.42.0"
plotly = "^6.0.0"
duckdb = "^1.1.3"
scikit-learn = "^1.6.1"
qrcode = { version = "^8.0", extras = ["pil"] }
pyarrow = "^19.0.1"
folium = "^0.19.5"
geopandas = "^1.0.1"
prefect = "^3.1.12"
mlflow = "^2.20.3"
great-expectations = "^1.3.5"
weasyprint = "^64.1"
statsmodels = "^0.14.4"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
ruff = "^0.9.7"
black = "^25.1.0"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.pytest.ini_options]
pythonpath = [".", "src"]
testpaths = ["tests"]

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"
